compiler/src/compile/optimisations/snapshots/compiler__compile__optimisations__constant_folding_visitor__test__constant_propagation_snapshot_tests.snap
---
source: crates/tapir-script/compiler/src/compile/optimisations/constant_folding_visitor.rs
expression: script
input_file: crates/tapir-script/compiler/src/compile/optimisations/snapshot_tests/constant_folding/int_addition.tapir
---
Script(
  functions: [
    Function(
      name: "@toplevel",
      span: "[span]",
      statements: [
        Statement(
          span: "[span]",
          kind: VariableDeclaration(
            ident: "x",
            value: Expression(
              span: "[span]",
              kind: Integer(8),
              meta: "[meta]",
            ),
          ),
          meta: "[meta]",
        ),
        Statement(
          span: "[span]",
          kind: VariableDeclaration(
            ident: "y",
            value: Expression(
              span: "[span]",
              kind: Integer(8),
              meta: "[meta]",
            ),
          ),
          meta: "[meta]",
        ),
        Statement(
          span: "[span]",
          kind: VariableDeclaration(
            ident: "z",
            value: Expression(
              span: "[span]",
              kind: Variable("int_prop"),
              meta: "[meta]",
            ),
          ),
          meta: "[meta]",
        ),
      ],
      arguments: [],
      return_types: FunctionReturn(
        types: [],
        span: "[span]",
      ),
    ),
  ],
)
