compiler/src/compile/optimisations/snapshots/compiler__compile__optimisations__constant_folding_visitor__test__constant_propagation_snapshot_tests@int_addition.tapir.snap
---
source: crates/tapir-script/compiler/src/compile/optimisations/constant_folding_visitor.rs
expression: pretty_printed
input_file: crates/tapir-script/compiler/src/compile/optimisations/snapshot_tests/constant_folding/int_addition.tapir
---
# @toplevel: {"FunctionId(0)"}

# {"SymbolId(3)"}
var x = 8;
# {"SymbolId(4)"}
var y = 8;
# {"SymbolId(5)"}
var z = 
        int_prop # {"SymbolId(0)"}
        ;
