compiler/src/compile/optimisations/snapshots/compiler__compile__optimisations__constant_folding_visitor__test__constant_propagation_snapshot_tests@mulitply_divide_1.tapir.snap
---
source: crates/tapir-script/compiler/src/compile/optimisations/constant_folding_visitor.rs
expression: pretty_printed
input_file: crates/tapir-script/compiler/src/compile/optimisations/snapshot_tests/constant_folding/mulitply_divide_1.tapir
---
# @toplevel: {"FunctionId(0)"}

# {"SymbolId(0)"}
int_prop = 
        int_prop # {"SymbolId(0)"}
        ;
# {"SymbolId(0)"}
int_prop = 
        int_prop # {"SymbolId(0)"}
        ;
# {"SymbolId(0)"}
int_prop = 
        int_prop # {"SymbolId(0)"}
        ;
# {"SymbolId(0)"}
int_prop = (1 // 
        int_prop # {"SymbolId(0)"}
        );
# {"SymbolId(1)"}
fix_prop = 
        fix_prop # {"SymbolId(1)"}
        ;
# {"SymbolId(1)"}
fix_prop = 
        fix_prop # {"SymbolId(1)"}
        ;
# {"SymbolId(1)"}
fix_prop = 
        fix_prop # {"SymbolId(1)"}
        ;
# {"SymbolId(1)"}
fix_prop = (1 // 
        fix_prop # {"SymbolId(1)"}
        );
